<?xml version="1.0"?>
<package format="2">
  <name>ipa_rtabmap_interface</name>
  <version>0.6.12</version>
  <description>The ipa_rtabmap_interface package</description>

  <maintainer email="florenz.graf@ipa.fraunhofer.de">Florenz Graf</maintainer>
  <author>Florenz Graf</author>

  <license>Fraunhofer IPA</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>image_geometry</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>rtabmap_ros</depend>
  <depend>OpenCV</depend>
  <depend>image_transport</depend>
 <depend>dynamic_reconfigure</depend>

  <depend>visualization_msgs</depend>

 
</package>
